# atompy

./: .gitignore  LICENSE  READEME.md  README.md  atompy.py  changelog.md  extract_requirements.py  pyproject.toml  readthedocs.yaml  requirements-frozen.txt  requirements.txt  todo.md
.github/workflows/: release.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: Hist1d.rst  Hist2d.rst  Vector.rst  conf.py  examples.rst  index.rst  io.rst  misc.rst  physics.rst  plotting.rst  test_index.rst  vector.rst
docs/source/_examples/: add_colorbar.py  constrained_layout_atompy_solution.py  constrained_layout_shortcomings.py  create_1d_plot.py  create_2D_plot_imshow.py  create_2D_plot_pcolormesh.py  custom_plot_method.py  example.root  legend_dash_dotted.py  legend_dashed.py  legend_dotted.py  multi_plots_multi_aspects_1.py  multi_plots_multi_aspects_2.py  multi_plots_multi_aspects_3.py  multi_plots_multi_aspects_4.py  multi_plots_multi_aspects_5.py  multi_plots_multi_aspects_6.py  multi_plots_multi_aspects_7.py  profile_x.py  profile_y.py  projection_x.py  projection_y.py  set_theme_atompy.py  single_plot_1D.py  single_plot_2D.py  single_plot_2D_imshow.py  single_plot_2D_pcolormesh.py  subplots.py  without_zeros.py
docs/source/analysis/: index.rst
docs/source/api_reference/: index.rst
docs/source/examples/: Hist1d.ipynb  index.rst
docs/source/histograms/: Hist1d.rst  Hist2d.rst  index.rst
docs/source/io/: index.rst  load_1d_data.rst  load_2d_data.rst  load_histos.rst  save.rst
docs/source/misc/: data_manip.rst  datatypes.rst  index.rst
docs/source/physics/: compton.rst  index.rst  misc.rst  physics.rst
docs/source/plotting/: colorbars.rst  colormaps.rst  constants.rst  examples.rst  formatting.rst  index.rst  line_marker_styles.rst  plot_misc.rst  subplots.rst
docs/source/tutorials/: convolute.rst  hist_plot.rst  histograms.rst  index.rst  rand_distr.rst  two_slope_norm.rst  vectors.rst
docs/source/vector/: index.rst
docs/source/vectors/: index.rst
src/atompy/: __init__.py  _atompy.py  _coordinate_system.py  _core.py  _data.py  _data_xy.py  _data_xyz.py  _errors.py  _histogram.py  _histogram1d.py  _histogram2d.py  _io.py  _io2.py  _misc.py  _miscellaneous.py  _physics.py  _plot_functions.py  _plotting.py  _plotting2.py  _plotting_old.py  _utils.py  _vector.py  _vectors.py  _version.py  atompy.py  coordinate_system.py  histogram1d.py  histogram2d.py  utils.py  vectors.py
src/atompy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/atompy/_histograms/: __init__.py
src/atompy/hist_utils/: __init__.py  _shared.py
src/atompy/physics/: __init__.py  _physics.py  coltrims.py  compton_scattering.py  constants.py  particles.py  physics.py
test/: tests.py
(+186 files in other folders)
