[project]
name = "atompy"
version = "5.2.1" # also update _version.py
authors = [{ name = "Max Kircher", email = "kircher@atom.uni-frankfurt.de" }]
description = """
    Utility methods for data analysis.
"""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "uproot",
    "scipy",
    "mplutils @ https://github.com/frekm/mpl-utils/archive/refs/tags/v0.4.0.zip"
]

[tool.setuptools.package-data]
atompy = ["styles/*.mplstyle"]

[project.urls]
"Repository" = "https://github.com/frekm/atompy"
"Documentation" = "https://atomphys-atompy.readthedocs.io/en/latest/"
