[project]
name = "atompy"
version = "5.7.4"
authors = [{ name = "Max Kircher", email = "kircher@atom.uni-frankfurt.de" }]
description = """
    Utility methods for data analysis.
"""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "uproot>=5.7.4",
]

[dependency-groups]
dev = [
    "esbonio>=2.0.0",
    "intersphinx-registry>=0.2605.27",
    "mplutils",
    "numpydoc>=1.10.0",
    "pydata-sphinx-theme>=0.17.1",
    "sphinx>=9.0.4",
]

[project.urls]
"Repository" = "https://github.com/frekm/atompy"
"Documentation" = "https://atomphys-atompy.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atompy"]

[tool.setuptools.package-data]
atompy = ["styles/*.mplstyle"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
extend-select = ["NPY", "I", "RUF022"]

[tool.uv.sources]
mplutils = { git = "https://github.com/frekm/mpl-utils.git" }
